<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reply"
        android:title="@string/messages__options_reply"
        android:icon="@drawable/copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/star_message"
        android:title="@string/snacks"
        android:icon="@drawable/star"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/info"
        android:title="@string/messages__options_info"
        android:icon="@drawable/info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:title="@string/messages__options_delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy"
        android:title="@string/messages__options_copy"
        android:icon="@drawable/copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/forward"
        android:title="@string/messages__options_forward"
        android:icon="@drawable/forward"
        app:showAsAction="ifRoom" />


</menu>