<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/notifications_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/log_reminder_title"/>


        <Switch
            android:id="@+id/log_remind_swt"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/reminder_ferq"/>

        <Button
            android:id="@+id/log_mc_notset"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/setting_btn_clickable"
            android:textSize="12sp"
            android:text="5 Hours"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/macros_status"/>

        <Switch
            android:id="@+id/dt_status_swt"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/reminder_ferq"/>


        <Button
            android:id="@+id/dt_st_notset"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/setting_btn_clickable"
            android:textSize="12sp"
            android:text="5 Hours"/>

    </LinearLayout>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/audio_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/audable_response"/>

        <Switch
            android:id="@+id/aud_resp_swt"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

    </LinearLayout>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/logout_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/click_to_logout"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="35dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/setting_btn_clickable"
            android:textSize="12sp"
            android:text="@string/logout_btn"/>

    </LinearLayout>





</LinearLayout>

